# SciXPipelineUtils

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: python_actions.yml
SciXPipelineUtils/: avro_serializer.py  s3_methods.py  scix_id.py  scix_uuid.py  utils.py
SciXPipelineUtils/tests/: test_s3.py  test_utils.py
tests/: test_avro_serializer.py  test_s3.py  test_scix_id.py  test_scix_uuid.py  test_utils.py
tests/stubdata/AVRO_schemas/: TEMPLATEOutputSchema.avsc
